tket/tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__argument__test__emit_argument_codegen@pre-mem2reg@llvm21_2.snap
---
source: tket/tket-qsystem/src/llvm/argument.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@argument_test_int.B1383B8E.0 = private constant [9 x i8] c"\08test_int"

define internal i64 @_hl.main.1() !dbg !3 {
alloca_block:
  %"0" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %read_arg_int = call i64 @argreader_get_i64(ptr @argument_test_int.B1383B8E.0), !dbg !8
  store i64 %read_arg_int, ptr %"4_0", align 4, !dbg !8
  %"4_01" = load i64, ptr %"4_0", align 4
  store i64 %"4_01", ptr %"0", align 4
  %"02" = load i64, ptr %"0", align 4
  ret i64 %"02"
}

declare i64 @argreader_get_i64(ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7}
!7 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!8 = !DILocation(line: 27062, column: 402, scope: !3)
